--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -51,6 +51,12 @@
     padding: 10px;
     border: 1px solid white;
     border-radius: 5px;
+    transition: all 1s;
+}
+
+.links:hover {
+    font-size: 22px;
+    border: 1px solid #0C0F14;
 }
 
 .linkActive {
